syntax = "proto3";

package journal;

option go_package = "/pkg/pb";

import "google/protobuf/timestamp.proto";

service JournalService {
  rpc CreateJournal(CreateJournalRequest) returns (CreateJournalResponse) {}
  rpc DeleteJournal(DeleteJournalRequest) returns (DeleteJournalResponse) {}
  rpc EditJournal(EditJournalRequest) returns (EditJournalResponse) {}
  rpc FindAllJournals(FindAllJournalsRequest) returns (FindAllJournalsResponse) {}
  rpc FindOneJournal(FindOneJournalRequest) returns (FindOneJournalResponse) {}
  rpc CreateTrade(CreateTradeRequest) returns (CreateTradeResponse) {}
  rpc EditTrade(EditTradeRequest) returns (EditTradeResponse) {}
  rpc FindOneTrade(FindOneTradeRequest) returns (FindOneTradeResponse) {}
  rpc FindAllTrades(FindAllTradesRequest) returns (FindAllTradesResponse) {}
  rpc DeleteTrade(DeleteTradeRequest) returns (DeleteTradeResponse) {}
}

message CreateJournalRequest {
  uint64 id = 1;
  string created_by = 2;
  google.protobuf.Timestamp createdAt = 3;
  string start_date = 4;
  string end_date = 5;
  string name = 6;
  string description = 7;
  repeated uint64 users_subscribed = 8;
}

message CreateJournalResponse {
  uint64 status = 1;
  string error = 2;
  Journal data = 3;
}

message EditJournalData {
  uint64 id = 1;
  string created_by = 2;
  google.protobuf.Timestamp createdAt = 3;
  string start_date = 4;
  string end_date = 5;
  string name = 6;
  string description = 7;
  repeated uint64 users_subscribed = 8;
}

message EditJournalRequest {
  uint64 id = 1;
  string created_by = 2;
  google.protobuf.Timestamp createdAt = 3;
  string start_date = 4;
  string end_date = 5;
  string name = 6;
  string description = 7;
  repeated uint64 users_subscribed = 8;
}

message EditJournalResponse {
  uint64 status = 1;
  string error = 2;
  EditJournalData data = 3;
}

message Journal {
  uint64 id = 1;
  string created_by = 2;
  string createdAt = 3;
  string start_date = 4;
  string end_date = 5;
  string name = 6;
  string description = 7;
  repeated uint64 users_subscribed = 8;
}

message FindAllJournalsRequest {}

message FindAllJournalsResponse {
  uint64 status = 1;
  string error = 2;
  repeated Journal data = 3;
}

message FindOneJournalRequest {
  uint64 id = 1;
}

message FindOneJournalResponse {
  uint64 status = 1;
  string error = 2;
  Journal data = 3;
}

message DeleteJournalRequest {
  repeated string id = 1;
}

message DeleteJournalResponse {
  uint64 status = 1;
  string error = 2;
}

message CreateTradeRequest {
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  google.protobuf.Timestamp createdAt = 17;
  string createdBy = 18;
}

message CreateTradeResponse {
  uint64 status = 1;
  string error = 2;
  Trade data = 3;
}

// EditTrade

message Trade {
  uint64 id = 1;
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  string createdAt = 17;
  string createdBy = 18;
}

message EditTradeRequest {
  uint64 id = 1;
  string timeExecuted = 2;
  string market = 3;
  float stopLoss = 4;
  float entryPrice = 5;
  float exitPrice = 6;
  uint64 journal = 7;
  float quantity = 8;
  string outcome = 9;
  string direction = 10;
  string baseInstrument = 11;
  string quoteInstrument = 12;
  float takeProfit = 13;
  string comments = 14;
  string strategy = 15;
  string timeClosed = 16;
  google.protobuf.Timestamp createdAt = 17;
  string createdBy = 18;
}

message EditTradeResponse {
  uint64 status = 1;
  string error = 2;
  Trade data = 3;
}

message FindAllTradesRequest {}

message FindAllTradesResponse {
  uint64 status = 1;
  string error = 2;
  repeated Trade data = 3;
}

message FindOneTradeRequest {
  uint64 id = 1;
}

message FindOneTradeResponse {
  uint64 status = 1;
  string error = 2;
  Trade data = 3;
}

message DeleteTradeRequest {
  repeated string id = 1;
}

message DeleteTradeResponse {
  uint64 status = 1;
  string error = 2;
}